# owid-rust

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
examples/: create_and_verify.rs
src/: creator.rs  crypto.rs  endpoints.rs  error.rs  fetch.rs  io.rs  lib.rs  owid.rs  version.rs
tests/: compatibility.rs  interop.rs  owid_tests.rs
